# chatbot

./: Diagram.html  IntermediateAPI.py  LocationPage.html  README.md  chatbot.js  diagram.md  index.js  intermediate_api.js  location.js  original photo binary.txt  package-lock.json  package.json  projet_explique.md  pyproject.toml  question_list.json  saved photo binary.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
html/: LocationPage.html
static/: LocationPage.html
