[tool.poetry]
name = "Location_Page"
version = "0.1.0"
description = "App that rerieves a user's geographical coordinates"
authors = ["Sarah Bellemare <sbellemare99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
